--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,18 +38,11 @@
             app:exitAnim="@anim/slide_exit_anim"
             app:popEnterAnim="@android:anim/slide_in_left"
             app:popExitAnim="@android:anim/slide_out_right" />
+        <action
+            android:id="@+id/action_nav_home_to_practiceAlgebraFragment"
+            app:destination="@id/practiceAlgebraFragment" />
     </fragment>
 
-    <activity
-        android:id="@+id/nav_algebra"
-        android:name="com.example.flamemathnew.ui.algebra.AlgebraActivity"
-        android:label="@string/algebra"
-        tools:layout="@layout/fragment_algebra" >
-        <argument
-            android:name="key"
-            app:argType="string"
-            android:defaultValue='"linal"' />
-    </activity>
 
     <fragment
         android:id="@+id/nav_discrete"
