--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#340187</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="transperent_main">#6AE4B9FF</color>
+    <color name="transperent_main">#30C1AC</color>
+    <color name="primary_teal_color">#2A9D8F</color>
+    <color name="matrix_background_color">#6F2A9D8F</color>
 </resources>
